fix: align title text

--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -45,5 +45,5 @@ main {
   justify-content: center;
   margin: 0 auto;
   gap: 40px;
-  padding: 0px 29%;
+  /* padding: 0px 29%; */
 }
